tests/ui/missing/missing-items/missing-type-parameter2.stderr
error[E0425]: cannot find type `N` in this scope
  --> $DIR/missing-type-parameter2.rs:3:8
   |
LL | struct X<const N: u8>();
   | ------------------------ similarly named struct `X` defined here
LL |
LL | impl X<N> {}
   |        ^
   |
help: a struct with a similar name exists
   |
LL - impl X<N> {}
LL + impl X<X> {}
   |
help: you might be missing a type parameter
   |
LL | impl<N> X<N> {}
   |     +++

error[E0425]: cannot find type `N` in this scope
  --> $DIR/missing-type-parameter2.rs:5:28
   |
LL | impl<T, const A: u8 = 2> X<N> {}
   |      -                     ^
   |      |
   |      similarly named type parameter `T` defined here
   |
help: a type parameter with a similar name exists
   |
LL - impl<T, const A: u8 = 2> X<N> {}
LL + impl<T, const A: u8 = 2> X<T> {}
   |
help: you might be missing a type parameter
   |
LL | impl<T, const A: u8 = 2, N> X<N> {}
   |                        +++

error[E0425]: cannot find type `T` in this scope
  --> $DIR/missing-type-parameter2.rs:9:20
   |
LL | struct X<const N: u8>();
   | ------------------------ similarly named struct `X` defined here
...
LL | fn foo(_: T) where T: Send {}
   |                    ^
   |
help: a struct with a similar name exists
   |
LL - fn foo(_: T) where T: Send {}
LL + fn foo(_: T) where X: Send {}
   |
help: you might be missing a type parameter
   |
LL | fn foo<T>(_: T) where T: Send {}
   |       +++

error[E0425]: cannot find type `T` in this scope
  --> $DIR/missing-type-parameter2.rs:9:11
   |
LL | struct X<const N: u8>();
   | ------------------------ similarly named struct `X` defined here
...
LL | fn foo(_: T) where T: Send {}
   |           ^
   |
help: a struct with a similar name exists
   |
LL - fn foo(_: T) where T: Send {}
LL + fn foo(_: X) where T: Send {}
   |
help: you might be missing a type parameter
   |
LL | fn foo<T>(_: T) where T: Send {}
   |       +++

error[E0425]: cannot find type `A` in this scope
  --> $DIR/missing-type-parameter2.rs:13:24
   |
LL | struct X<const N: u8>();
   | ------------------------ similarly named struct `X` defined here
...
LL | fn bar<const N: u8>(_: A) {}
   |                        ^
   |
help: a struct with a similar name exists
   |
LL - fn bar<const N: u8>(_: A) {}
LL + fn bar<const N: u8>(_: X) {}
   |
help: you might be missing a type parameter
   |
LL | fn bar<const N: u8, A>(_: A) {}
   |                   +++

error: defaults for generic parameters are not allowed here
  --> $DIR/missing-type-parameter2.rs:5:9
   |
LL | impl<T, const A: u8 = 2> X<N> {}
   |         ^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0425`.
